@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999990';
+our $VERSION='0.99999991';
 
 
 use 5.005;
